2008-05-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.mdp, VersionControl.addin.xml,
	  Makefile.am,
	  MonoDevelop.VersionControl/VersionControlFileSystemExtension.cs,
	  MonoDevelop.VersionControl/VersionControlNodeExtension.cs,
	  MonoDevelop.VersionControl/Checkout.cs,
	  MonoDevelop.VersionControl/Publish.cs,
	  MonoDevelop.VersionControl/VersionControlService.cs: New project
	  model changes.

2008-05-15  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/gui.stetic: Set correct target version.

2008-04-11  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.mdp: Removed unneeded reference.

2008-03-07  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/generated.cs,
	  gtk-gui/MonoDevelop.VersionControl.Dialogs.CommitDialog.cs,
	  gtk-gui/gui.stetic: Use commit icon in the ok button of the commit
	  dialog.
	* MonoDevelop.VersionControl/Publish.cs: Improved message dialog.

2008-03-04  Mike Krüger <mkrueger@novell.com> 

	

2008-03-04  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.VersionControl/Update.cs,
	  MonoDevelop.VersionControl/CommitCommand.cs,
	  MonoDevelop.VersionControl/AddRemoveMoveCommand.cs,
	  MonoDevelop.VersionControl/Task.cs,
	  MonoDevelop.VersionControl/Checkout.cs,
	  MonoDevelop.VersionControl/Publish.cs: Added some getstring calls

2008-03-04  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.VersionControl/RevertCommand.cs: Added secondary text to the
	  revert dialog.

2008-03-04  Mike Krüger <mkrueger@novell.com> 

	* VersionControl.addin.xml: Changed file menu for hig.

2008-03-04  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.VersionControl.Dialogs/CommitDialog.cs,
	  MonoDevelop.VersionControl.Views/Statuses.cs,
	  MonoDevelop.VersionControl.Views/Logs.cs,
	  MonoDevelop.VersionControl/CommitCommand.cs,
	  MonoDevelop.VersionControl/VersionControlNodeExtension.cs,
	  MonoDevelop.VersionControl/RevertCommand.cs,
	  MonoDevelop.VersionControl/Publish.cs,